ajout et nouvelles modifications de formulaire 1

--- a/formulaire1.css
+++ b/formulaire1.css
@@ -1,50 +1,104 @@
-html, body{
-    height: 100%;
-}
-body{
-    background: yellowgreen;
-    margin: 0;
-    font-family: 'Open Sans',Arial, Helvetica, sans-serif;
-}
+html, body {
+    align-items: center;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+  }
+
 .formulaire1{
-    width: 325px;
-    background: rgb(12, 3, 52);
-    text-align: left;
-    padding: 30px;
-    border: 2px solid rgba(0, 0, 0, .65);
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-    margin: 0 auto;
-    position: relative;
-    top: calc(50% - 175px)
+    background-color: #131429;
+    border-radius: 20px;
+    box-sizing: border-box;
+    height: 500px;
+    padding: 20px;
+    width: 320px;
 }
-.formulaire1 h1{
-    color: white;
-    margin: 0;
-    font-size: 2em;
+.welcome{
+    color: rgba(255, 255, 255, 0.879);
+    font-size: 40px;
+    font-family: sans-serif;
+    font-weight: 600;
+    margin-top: 30px;
 }
-.formulaire1 h5{
-    color: white;
-    font-weight: normal;
-    border-radius:5px ;
+.create{
+    color: rgba(255, 255, 255, 0.879);
+    font-family: sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 10px;
 }
 .formulaire1 input{
-    background: rgba(128, 128, 128, 0.407);
-    color: rgba(245, 245, 220, 0.614) ;
-    font-family: inherit;
-    width: 200px;
-    padding: 10px;
-    border: 1px solid rgba(0, 0, 0, .2);
-    border-radius: 10px;
-    font-size: 0.85em;
+    background-color: #303245;
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    font-size: 18px;
+    height: 100%;
+    outline: 0;
+    padding: 4px 20px 0;
+    width: 100%;
+}
+.conteneur{
+    height: 50px;
+    position: relative;
+    width: 100%;
+    margin-top: 40px;
+
 }
 
-.formulaire1 input[type="submit"]{
-    width: 50%;
-    background: #2207ef;
-    width: 200px;
-    color: white;
-    box-shadow: 0 2px 0 rgb(0, 55, 135);
-    font-size: 1em;
-    margin: 20px 0 5px 0;
+.cut {
+    background-color: #15172b;
+    border-radius: 10px;
+    height: 20px;
+    left: 20px;
+    position: absolute;
+    top: -20px;
+    transform: translateY(0);
+    transition: transform 200ms;
+    width: 76px;
+  }
+
+  .input:focus ~ .cut,
+  .input:not(:placeholder-shown) ~ .cut {
+    transform: translateY(8px);
+  }
+  
+.placeholder {
+    color: #65657b;
+    font-family: sans-serif;
+    left: 20px;
+    line-height: 14px;
+    pointer-events: none;
+    position: absolute;
+    transform-origin: 0 50%;
+    transition: transform 200ms, color 200ms;
+    top: 20px;
+  }
+  .input:focus ~ .placeholder,
+  .input:not(:placeholder-shown) ~ .placeholder {
+    transform: translateY(-30px) translateX(10px) scale(0.75);
+  }
+  
+  .input:not(:placeholder-shown) ~ .placeholder {
+    color: #808097;
+  }
+  
+  .input:focus ~ .placeholder {
+    color: #dc2f55;
+  }
+
+.formulaire1 button{
+    background-color: #08d;
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    cursor: pointer;
+    font-size: 18px;
+    height: 50px;
+    margin-top: 38px;
+    text-align: center;
+    width: 100%;
 }
